--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -10,6 +10,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=backend-postgres-1;Port=5432;Database=utilities;Username=util_user;Password=util_pass"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=utilities;Username=util_user;Password=util_pass"
   }
 }
