--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -6,27 +6,31 @@ services:
     container_name: backend
     ports:
       - "5000:8080"
-    depends_on:
-      - postgres
+    # depends_on:
+    #   - postgres
+    # environment:
+    #   ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=utilities;Username=util_user;Password=util_pass"
     environment:
-      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=utilities;Username=util_user;Password=util_pass"
+      ConnectionStrings__DefaultConnection: "Host=host.docker.internal;Port=5432;Database=utilities;Username=util_user;Password=util_pass"
       TZ: Europe/Minsk
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - appnet
 
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: util_user
-      POSTGRES_PASSWORD: util_pass
-      POSTGRES_DB: utilities
-      TZ: Europe/Minsk
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    networks:
-      - appnet
+  # postgres:
+  #   image: postgres:15
+  #   environment:
+  #     POSTGRES_USER: util_user
+  #     POSTGRES_PASSWORD: util_pass
+  #     POSTGRES_DB: utilities
+  #     TZ: Europe/Minsk
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - pgdata:/var/lib/postgresql/data
+  #   networks:
+  #     - appnet
 
   frontend:
     build:
